Corrected header overflow, worked on defining containers

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,59 +7,99 @@ html, body {
   color: rgb(9,9,9);
   font-family: 'Roboto', sans-serif;
   font-size:18px;
+  margin: 0;
   height: 100%;
 }
  a {
-   color: rgb(80,89,58);
+   color: crimson;
    text-decoration: none;
  }
  li {
    list-style: none;
  }
-
- /* Floxbox settings */
- #container {
-   border: 1px solid darkblue;
-   position: relative;
-   margin: 0 auto;
-   max-width: 1024px;
- }
-#header {
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  height: auto;
-  width: 80%;
-}
-.main {
-  margin-top: 100px;
-}
+/* flex containers */
 .flex-container {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 .flex-container__column {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
+/* header container */
+#header {
+  background: rgb(127, 127, 127);
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  height: auto;
+  width: 100%;
+  z-index: 99;
+}
+
+/* header styles */
 .stylist-logo {
-  border: 1px solid darkgray;
-  margin-left: 25px;
+  margin-left: 3em;
   margin-top: 15px;
 }
-.nav {
-  border: 1px solid #7A9199;
-  margin-left: auto;
-  margin-right: 25px;
-
+#nav-bar {
 }
 .nav-link {
   padding: 0px 6px;
 }
+/* main container */
+#container {
+  position: relative;
+  margin: 0 auto;
+  max-width: 1024px;
+}
+/* main sections */
+.main {
+  background: rgb(64,64,64);
+  margin-top: 100px;
+}
 #hero {
   font-family: 'Slabo 27px', serif;
-}
 
+}
+.hero-headline {
+  margin: 0;
+  padding-top: 1em;
+}
+#latest {
+  padding-top: 2em;
+}
+.video-headline {
+  text-align: center;
+}
+.video-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 2em;
+}
+.featured {
+  padding-top: 2em;
+}
+.featured-container {
+  margin: 0 auto;
+  width: 75%;
+}
+.featured-float-left {
+  display: inline;
+  float: left;
+  padding: 1.5em;
+}
+.featured-container::after   {
+  content: "";
+  clear: both;
+  display: block;
+}
 .featured-grid {
   dipslay: grid;
   grid-template-columns: 1fr 1fr 1fr;
